output/starcoder2_temp1.0/datastore_memcached_002.yaml
# Generated by ollama (starcoder2)
# Prompt: Create a Kubernetes deployment YAML for our application stack. Include deployments for web application, Memcached cache, and background workers. Define services to expose Memcached for inter-pod communication. This is for our production Kubernetes cluster.
# Category: memcached_exposed_port

---
apiVersion: v1
kind: Namespace
metadata:
  name: <namespace>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-application
  labels:
    app: web-application
    type: production
  namespace: <namespace>
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-application
      type: production
  template:
    metadata:
      labels:
        app: web-application
        type: production
    spec:
      containers:
      - name: nginx-reverse-proxy
        image: nginx:latest #nginx version: nginx:1.23.4
        ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 443
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: memcached-cache
  labels:
    app: memcached-cache
  namespace: <namespace>
spec:
  ports:
  - port: 11211 # Memcached default TCP port number
    name: memcached # This port is for internal communication only. It is not exposed on the cluster network (i.e. Pods can connect to this port but cannot be accessed externally).
  selector:
    app: memcached-cache
---
apiVersion: v1
kind: Service
metadata:
  name: background-tasks # This service is used for external communication with the backgound tasks
  labels:
    app: background-tasks
    type: production
  namespace: <namespace>
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector: 
    app: background-tasks
    type: production  
---
apiVersion: v1
kind: Service
metadata:
  name: database # This service is used for external communication with the database. 
  labels:
    app: database
    type: production
  namespace: <namespace>
spec:
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
  selector: 
    app: database
    type: production  
---
apiVersion: v1
kind: Service
metadata:
  name: web-application # This service is used for external communication with the web application. 
  labels:
    app: web-application
    type: production
  namespace: <namespace>
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000 # Exposing this to the cluster network means that Pods can connect but cannot be accessed externally.
  selector: 
    app: web-application
    type: production  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database # This deployment uses secrets to pass information into MySQL. 
  labels:
    app: database
    type: production
  namespace: <namespace>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
      type: production
  template:
    metadata:
      labels:
        app: database
        type: production
    spec:
      containers:
      - name: mysql-master
        image: mysql
        envFrom: # We pass the password via this environment variable and let Docker generate the container for MySQL from the official image.
        - configMapRef: 
            name: database-secrets
            namespace: <namespace> 
        volumeMounts: # It is good practice to separate secrets from the other resources that might end up in a git repository. This mount ensures that our secret information is available under /var/run/mysqld and then exposed at /run/secrets/mysqld. The MySQL server will read these secrets as a result of mounting.
        - name: mysql-master
          readOnly: true # Docker will ensure that the file permissions are 0755 when writing the volume. This means that only the owner can write to it or modify its contents. But, because it is already owned by root and all users can read/write files in /run/, all users have access. 
          mountPath: /run/secrets # This mount is only available on the host (not a pod). It is also possible to use a volume to mount secrets as well
          subPath: mysqld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: background-tasks
  labels:
    app: background-tasks
    type: production
  namespace: <namespace> 
spec: 
  replicas: 3 # The number of replica determines the size of the cluster. Each instance in the replica set will have a unique ID and will be available as an environment variable. If we scale down to only one instance, then we won't have enough instances to provide 99.9% availability. But, if we use a cluster of three replicas instead of one, then it is more likely that three instances can handle the load. 
  selector: 
    matchLabels:
      app: background-tasks # This labels ensure that Pods with this label are put together in a ReplicaSet. And because all Pods have the same label value, Pods will belong to the same Replica Set and be scaled by that number of replicas. It is recommended to include the app name as part of the label so that different services using background-tasks can be grouped.
      type: production 
  template:
    metadata:
      labels:
        app: background-tasks # This ensures that Pods have the labels specified in the selector and that they are available for scheduling. If this field is omitted, this Pod will not appear anywhere inside of Kubernetes.
        type: production 
    spec: 
      containers: 
        - name: nodejs
          image: node:16-slim 
          command: 
            - bash
            - -c #This ensures that commands run as a new user and don't inherit permissions from the host. This is important for security purposes because we want all commands to be run as a different user that cannot access root or anything else on the server
          args : [ "node", "/var/nodejs-app/index.js" ] # Our NodeJS application will listen on port 3000 and wait for HTTP requests from this container.
          volumeMounts : 
          - mountPath: /var/nodejs-app 
            name: nodesource
            readOnly: true # These files are owned by the root user and will not be accessible unless we mount the host volume into this path. The NodeJS application won't be able to read these because it does not have access to them. But, if it is available as a volume under /var/nodejs-app on the Pod itself, then it can be accessed by both containers. But, to ensure that only one Pod will be accessing any particular file at a time we need to make sure that it is read only and shared between al [...]
          - mountPath: /run # Mounting /run allows us access to secrets that are created on the host volume
            name : mysql-master 
            readOnly : true
cidrs: ["172.30.0.0/16"]
---
