output/starcoder2_temp1.0/modern_kong_001.yaml
apiVersion: kuma.io/v1alpha1
kind: Gateway
metadata:
  name: gateway-1f4a42f9-3068-4758-83bf-ec052d6d08e2
spec: {}
---
apiVersion: kuma.io/v1alpha1
kind: ServiceEntry
metadata:
  name: ingress-gateway
  labels:
    app: ingress-gateway
spec:
  hostname: example-ingress-gateway.svc.cluster.local
  port: 8080
  tags:
    version: v3
---
apiVersion: kuma.io/v1alpha1
kind: ServiceEntry
metadata:
  name: backend-server
  labels:
    app: backend-server
spec:
  hostname: example-backend-server.svc.cluster.local
  port: 8080
  tags:
    version: v3
